--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nix = "0.26.2"
+ctor = "0.2.2"
+lazy_static = "1.4.0"
+nix = { version = "0.26.2", features = ["fs", "zerocopy"] }
 object = "0.31.1"
