--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,8 @@ edition = "2021"
 [dependencies]
 ctor = "0.2.2"
 lazy_static = "1.4.0"
+libc = "0.2.147"
 nix = { version = "0.26.2", features = ["fs", "zerocopy"] }
 object = "0.31.1"
+procfs = "0.15.1"
+thiserror = "1.0.40"
